[package]
name = "readstat-sys"
version = "0.1.0"
edition = "2021"
links = "readstat"
license = "MIT"
repository = "https://github.com/samplics-org/svy-io"
homepage = "https://svylab.com"
description = "ReadStat-based readers for Python/Polars"

[build-dependencies]
bindgen = "0.70"
pkg-config = "0.3"
cc = "1"

[dependencies]
libc = "0.2"
